--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,30 @@
 .card{
-  width:10vw;
-  height: 15vh;
-  border:2px solid white;
-  display:inline-block;
   background-size: 70%;
   background-position: center;
   background-repeat: no-repeat;
+  flex:1;
+  background-color: purple;
+  border-radius: 20px;
+  margin:1%;
+}
+.modal{
+background-color: rgba(56,255,255,0.9);
+
+}
+.body{
+  width:100%;
+  height: 100%;
+}
+.row{
+  flex:1;
+  width:100%;
+  display: flex;
+  flex-direction: row;
+}
+#board{
+  width:60vw;
+  height:70vh;
+  display: flex;
+  flex-direction: column;
+  margin-left:20vw
 }
